src/app/(defaultLayout)/calculator/package/_components/PackageDetail/packageDetail.module.css
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: calc(100dvh - 7rem);
    background-color: hsl(var(--bg-box-color-default));
    border-left: 1px solid hsl(var(--line-color-default));
    border-right: 1px solid hsl(var(--line-color-default));
    box-sizing: border-box;
    padding: 2.4rem;
    font-size: 1.4rem;
}
.label {
    display: flex;
    width: 100%;
    align-items: flex-start;
    font-size: 2.2rem;
    font-weight: bold;
    color: hsl(var(--font-color-light));
}
.controlZone {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    width: 100%;
}
.detailZone {
    display: flex;
    flex-direction: column;
    gap: 2.4rem;
    padding: 0.4rem;
    box-sizing: border-box;
    width: 100%;
    align-items: center;
}
.imageZone {
    flex-shrink: 0;
    margin: 0 auto;
    width: 12rem;
    height: 12rem;
    background: linear-gradient(135deg, #362003, #9e5f04);
    border-radius: 4px;
}
.imageZone > img {
    width: 100%;
    height: 100%;
}
.detailsContainer {
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
    box-sizing: border-box;
    border-radius: 4px;
    background-color: hsl(var(--ui-color-background-070));
    padding: 1rem;
    width: 100%;
}
.detailsLabel {
    background-color: #34434C;
    border-radius: 1000px;
    padding: 0.4rem 1rem 0.4rem 1rem;
    width: fit-content;
}
.title {
    font-size: 1.8rem;
}
.saleDate {
    font-size: 1.4rem;
    color: #A7C7C8;
}
.price {
    font-size: 1.6rem;
    display: flex;
    align-items: flex-end;
    gap: 0.4rem;
}
.price > span:first-child {
    font-size: 1.8rem;
}
.price > span:last-child {
    color: hsl(var(--font-color-light));
}
.itemsZone {
    margin-top: 4rem;
    display: flex;
    flex-direction: column;
    gap: 2.4rem;
    padding: 0.4rem;
    box-sizing: border-box;
    width: 100%;
    align-items: center;
}

@media screen and (min-width: 769px) {
    .detailsContainer {
        max-width: 40rem;
        padding: 1.8rem;
    }
}
@media screen and (max-width: 768px) {
    .detailsContainer {
    }
}

